# mesil

./: .gitignore  LICENSE  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml  script.awk  setup.py
docs/: Makefile  conf.py  index.md  index.rst  make.bat
docs/api/: datafile.md
mesil/: cli.py  config.py
mesil/conf/: config.yml
mesil/conf/style_sheets/: default.mplstyle
mesil/data/: clean.py  cleanse.py  datafile.py  files.py  filter.py  header.py  metadata.py  process.py  select.py  transform.py  utils.py
mesil/plot/: customize.py
mesil/plotting/: customize.py  plot.py  plotters.py
mesil/process/: analysis.py  clean.py  datafile.py  read.py  transform.py
mesil/tests/: conftest.py
mesil/tests/data/: test_clean.py  test_datafile.py  test_header.py  test_process.py  test_read.py  test_transform.py  test_utils.py
