[tool.poetry]
name = "mesil"
version = "0.1.0"
description = "Source code used in my undergraduate research \"Investigation of cellular internalization and nanovalve endocytosis mechanisms in fluorescence-labeled rod morphology: a treatment for esophageal cancer\"."
authors = ["Daniel Levita"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mesil" }
]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
openpyxl = "^3.0.10"
pandas = "^1.5.1"
charset-normalizer = "^3.1.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
prospector = "^1.7.7"
safety = "^2.3.1"
ipykernel = "^6.19.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
