[tool.poetry]
name = "mesil"
version = "0.1.0"
description = "Source code used in my undergraduate research \"Investigation of cellular internalization and nanovalve endocytosis mechanisms in fluorescence-labeled rod morphology: a treatment for esophageal cancer\"."
authors = ["Daniel Levita <71600818+danplevs@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mesil" }
]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
openpyxl = "^3.0.10"
pandas = "^1.5.1"
charset-normalizer = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.10.1"
prospector = "^1.7.7"
ipykernel = "^6.19.2"
taskipy = "^1.11.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=mesil -vv"
post_test = "coverage html"
